# slatefs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.azure-mini  README.md  docker-compose.yml  slatefs-plan.md
.github/workflows/: ci.yml
crates/nfs3-server/: .cargo_vcs_info.json  Cargo.toml  README.md  UPSTREAM.md
crates/nfs3-server/src/: context.rs  lib.rs  mount_handlers.rs  nfs_ext.rs  nfs_handlers.rs  portmap_handlers.rs  request_auth.rs  rpcwire.rs  tcp.rs  transaction_tracker.rs  units.rs
crates/nfs3-server/src/fs_util/: metadata_ext.rs  mod.rs
crates/nfs3-server/src/memfs/: config.rs  mod.rs
crates/nfs3-server/src/rpcwire/: messages.rs
crates/nfs3-server/src/vfs/: handle.rs  iterator.rs  mod.rs
crates/nfs3-server/src/vfs/adapters/: iterator.rs  mod.rs
crates/rs9p/: .cargo_vcs_info.json  Cargo.toml  README.md
crates/rs9p/src/: fcall.rs  serialize.rs  srv.rs
crates/slatefs-9p/: Cargo.toml
crates/slatefs-9p/src/: filesystem.rs  lib.rs
crates/slatefs-9p/tests/: p9_mount.rs
crates/slatefs-cli/: Cargo.toml
crates/slatefs-cli/src/: main.rs
crates/slatefs-core/: Cargo.toml
crates/slatefs-core/src/: attrcache.rs  block.rs  config.rs  control.rs  data.rs  error.rs  fsck.rs  health.rs  lib.rs  locks.rs  metrics.rs  quota.rs  rate.rs  snapshot.rs  store.rs  version_snapshot.rs  versioning.rs  vfs.rs  vfs_impl.rs  volume.rs
crates/slatefs-core/src/crypto/: aead.rs  kms.rs  mod.rs  names.rs  transformer.rs
crates/slatefs-core/src/meta/: alloc.rs  dirent.rs  inode.rs  keys.rs  mod.rs  superblock.rs
crates/slatefs-core/tests/: block.rs  block_crash.rs  block_model.rs  crash.rs  exports.rs  fleet.rs  model.rs  phase0.rs  phase3.rs  versioning.rs  vfs_ops.rs
crates/slatefs-core/tests/common/: mod.rs
crates/slatefs-daemon/: Cargo.toml
crates/slatefs-daemon/src/: main.rs
crates/slatefs-http/: Cargo.toml
crates/slatefs-http/src/: auth.rs  config.rs  dto.rs  errors.rs  identifiers.rs  lib.rs  metrics.rs  paths.rs  registry.rs  routes.rs  streaming.rs  views.rs
crates/slatefs-http/tests/: consumer_api.rs  contract.rs
crates/slatefs-http/tests/snapshots/: consumer-v1.openapi.sha256  consumer-v1.routes.txt
crates/slatefs-nbd/: Cargo.toml
crates/slatefs-nbd/src/: lib.rs
crates/slatefs-nbd/tests/certs/: README.md  ca.pem  client.key  client.pem  regenerate.sh  server.key  server.pem
crates/slatefs-nfs/: Cargo.toml
crates/slatefs-nfs/examples/: memfs_server.rs
crates/slatefs-nfs/src/: adapter.rs  fh.rs  lib.rs
crates/slatefs-nfs/tests/: nfs_creds.rs  nfs_mount.rs
docs/: architecture.md  block-device-plan.md  client-support.md  consumer-api.md  deployment-architecture.md  on-disk-format.md  operations-runbook.md  performance.md  pjdfstest-exclusions.md  security-review.md  threat-model.md  web-demo-local.md
docs/api/: consumer-v1-errors.md  consumer-v1.openapi.yaml  demo-bff-v1.openapi.yaml
docs/api/fixtures/: consumer-v1.json
examples/: slatefs.toml
monitoring/: slatefs-grafana-dashboard.json  slatefs-prometheus-rules.yml
plans/: consumer-demo-web-components-plan.md
scripts/: azure-prodtest.sh  docker-kernel-mount-test.sh  fio-over-nfs.sh  fsx-fsstress-over-nfs.sh  live-snapshot-over-nfs.sh  multi-volume-overhead.sh  nbd-failover-drill.sh  nbd-kernel-attach-test.sh  nfs-failover-drill.sh  nfs-kernel-mount-test.sh  p9-kernel-mount-test.sh  pjdfstest-over-9p.sh  pjdfstest-over-nfs.sh  qemu-nbd-smoke.sh  qemu-p9-tcp-smoke.sh  test-web-demo-package-manager.sh  web-demo-blob-upload.mjs  web-demo-package-manager.sh  web-demo-seed-test.sh  web-demo-seed.sh  web-demo-smoke.sh  web-demo.sh  zfs-over-nbd-smoke.sh
web/: .redocly.yaml  COMPATIBILITY.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
web/apps/demo/: README.md  index.html  package.json  tsconfig.json
web/apps/demo-server/: .env.example  README.md  package.json  tsconfig.json
web/apps/demo-server/src/: config.ts  main.ts  security.ts  server.ts  session-store.ts  upstream.ts
web/apps/demo-server/test/: config.test.ts  server.test.ts
web/apps/demo/preview/: serve.mjs  shot.py
web/apps/demo/src/: component-wiring.ts  main.ts  operation-drawer.ts  styles.css  url-state.ts
web/apps/demo/test/: component-wiring.test.ts  operation-drawer.test.ts  styles.test.ts  url-state.test.ts
web/examples/react/: README.md
web/examples/vanilla/: index.html  main.ts  package.json  tsconfig.json
