[package]
name = "slatefs-cli"
description = "SlateFS management CLI: tenants, volumes, quotas, keys, snapshots"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "slatefs"
path = "src/main.rs"

[dependencies]
slatefs-core.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
age.workspace = true

[dev-dependencies]
tempfile.workspace = true
