[package]
name = "slatefs-core"
description = "Protocol-independent core of SlateFS: VFS semantics, metadata schema, crypto, control plane"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
slatedb.workspace = true
slatedb-common.workspace = true
tokio.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
postcard.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
moka.workspace = true
aes-gcm.workspace = true
chacha20poly1305.workspace = true
aes-siv.workspace = true
hkdf.workspace = true
sha2.workspace = true
age.workspace = true
zeroize.workspace = true
hex.workspace = true

aws-config = { workspace = true, optional = true }
aws-sdk-kms = { workspace = true, optional = true }

[features]
# AWS KMS as the master-KEK provider (DD-8). Off by default: heavy
# dependency tree, only needed in cloud deployments.
aws-kms = ["dep:aws-config", "dep:aws-sdk-kms"]

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
