[package]
name = "slatefs-daemon"
description = "slatefsd: serves volumes over NFSv3 and 9P2000.L"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "slatefsd"
path = "src/main.rs"

[dependencies]
slatefs-core.workspace = true
slatefs-nfs.workspace = true
slatefs-9p.workspace = true
slatedb.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
uuid.workspace = true
