[package]
name = "slatefs-daemon"
description = "slatefsd: serves volumes over NFSv3 and 9P2000.L"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "slatefsd"
path = "src/main.rs"

[dependencies]
slatefs-core.workspace = true
slatefs-nfs.workspace = true
slatefs-9p.workspace = true
slatefs-nbd.workspace = true
slatedb.workspace = true
tokio.workspace = true
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde.workspace = true
uuid.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
x509-parser.workspace = true
sha2.workspace = true

[dev-dependencies]
bytes.workspace = true
nfs3_server.workspace = true
slatefs-nbd = { workspace = true, features = ["test-support"] }
rcgen.workspace = true
tempfile.workspace = true
