[package]
name = "slatefs-http"
description = "Contract-first consumer HTTP frontend for SlateFS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
slatefs-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
axum.workspace = true
http.workspace = true
http-body-util.workspace = true
futures.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
postcard.workspace = true
uuid.workspace = true
bytes.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
sha2.workspace = true
tempfile.workspace = true
tower.workspace = true
