[package]
name = "slatefs-nfs"
description = "NFSv3 frontend for SlateFS (adapter: Vfs -> nfs3_server traits)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
slatefs-core.workspace = true
nfs3_server.workspace = true
tokio.workspace = true
tracing.workspace = true
hmac.workspace = true
sha2.workspace = true

[dev-dependencies]
nfs3_client.workspace = true
tempfile.workspace = true
